// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavItem > render an active <NavItem /> 1`] = `
<li>
  <a
    aria-current="page"
    className="_navItem_8603fc"
    href=""
    onClick={[Function]}
  >
    Active
  </a>
</li>
`;

exports[`NavItem > render an inactive <NavItem /> 1`] = `
<li>
  <a
    className="_navItem_8603fc"
    href=""
    onClick={[Function]}
  >
    Inactive
  </a>
</li>
`;

exports[`NavItem > renders a different route 1`] = `
<li>
  <a
    className="_navItem_8603fc"
    href="account"
    onClick={[Function]}
  >
    Account
  </a>
</li>
`;
